--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,22 @@ body {
   padding-bottom: 4.5px;
   max-width: 85px;
 }
+.currentbtn {
+  background-color: rgb(245, 176, 245);
+  color: white;
+  border: 2px #282c46 solid;
+  font-size: 18px;
+  height: 40px;
+  line-height: 20px;
+  border-radius: 10px;
+  position: relative;
+  bottom: 2px;
+  border-radius: 7px;
+  padding-top: 4.5px;
+  padding-bottom: 4.5px;
+  max-width: 85px;
+}
+
 #city-name {
   margin: 10px;
   font-size: larger;
@@ -59,7 +75,7 @@ body {
 }
 
 #current-weather {
-  font-size: 40px;
+  font-size: 58px;
   position: relative;
   text-align: center;
 }
